# Loic-Roldan-Waals

./: .gitignore  README.md  _config.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Random Problems/: Toilet Paper Numbers.ipynb
Random Problems/IMDb movies/: Ratings.xlsx  Scraping imdb.py  Scraping.py  complete movie database.csv  rating prediction.py
Random Problems/Python Teaching/: Guessing game.py  Hangman.py
Random Problems/Special Times/: Special Times.ipynb  special_time_filters.py
Random Problems/best hangman word/: Best Hangman Word.py  google words.txt  letter frequency.csv  words.txt
Random Problems/longest 7 cell display word/: longest 7 word.py  words.txt
random_problems/imdb_movie_prediction/: Scraping imdb.py  Scraping.py  complete movie database.csv  rating prediction.py
random_problems/longest_7_cell_display_word/: Timing longest word.ipynb
random_problems/python_teaching/: Guessing game.py
random_problems/special_times/: Special Times.ipynb  special_time_generators.py
random_problems/the_impostor_problem/: utils.py
topics/best_hangman_word/: Best Hangman Word.py  README.md  letter frequency.csv  words.txt
topics/imdb_movie_prediction/: rating prediction.py
topics/longest_7_cell_display_word/: README.md  longest 7 word.py  words.txt
topics/the_impostor_problem/: README.md  app.py  impostor_streak_calculator.py  utils.py
